footer visibility fix, spike fix on tablet

--- a/app/css/sections/_home-desktop.scss
+++ b/app/css/sections/_home-desktop.scss
@@ -476,7 +476,10 @@
     height: 6em;
     left: 0;
     z-index: 10001;
-    top: 21em;
+    top: 40em; //21em
+    @include breakpoint("tablet-n-desktop") {
+      z-index: 100;
+    }
   }
 
 
@@ -629,7 +632,7 @@
     position: fixed;
     top: 81px;
     height: 15.7em;
-    z-index: 121;
+    z-index: 117;
     margin: auto;
     left: 0;
     right: 0;
@@ -656,12 +659,7 @@
       height: 0.1em;
     }
 
-    #herolink {
-      width: 100%;
-      height: 14em;
-      display: block;
-      position: absolute;
-    }
+
 
 
     .use-only {
@@ -1277,6 +1275,14 @@
     right: 0px;
     height: 34em;
     overflow: hidden;
+
+
+    #herolink {
+      width: 100%;
+      height: 14em;
+      display: block;
+      position: absolute;
+    }
 
 
     .use-only {
